ingress/default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
  labels:
    name: default
spec:
  backend:
    service:
      name: go-demo-2-api
      port:
        number: 8080
